Working implementation of DTU pay as a distributed application.